--- a/index.html
+++ b/index.html
@@ -1,101 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Clipboard landing page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+    <main class="grid-flow">
+        <section class="section grid-flow">
+            <img src="/images/logo.svg" alt="hey" class="logo-image">
+            <div class="text-div">
+                <h2 class="heading">A history of everything you copy</h2>
+                <h1 class="para-heading">Clipboard allows you to track and organize everything you 
+                copy. Instantly access your clipboard on all your devices.</h1>
+            </div>
+            <article>
+                <button>Download or iOS</button>
+                <button class="mac">Download for Mac</button>
+            </article>
+        </section>
 
-  <img src="/images/icon-blacklist.svg" alt="">
-  <img src="/images/icon-facebook.svg">
-  <img src="/images/icon-instagram.svg" alt="">
-  <img src="/images/icon-preview.svg" alt="">
-  <img src="/images/icon-text.svg" alt="">
-  <img src="/images/icon-twitter.svg" alt="">
-  <img src="/images/image-computer.png" alt="">
-  <img src="/images/image-devices.png" alt="">
-  <img src="/images/logo-google.png" alt="">
-  <img src="/images/logo-hp.png" alt="">
-  <img src="/images/logo-ibm.png" alt="">
-  <img src="/images/logo-microsoft.png" alt="">
-  <img src="/images/logo-vector-graphics.png" alt="">
-  <img src="/images/logo.svg" alt="">
-  A history of everything you copy
+        <section class="section grid-flow">
+            <div class="text-div">
+                <h2 class="heading">Keep track of your snippets</h2>
+                <h1 class="para-heading">Clipboard instantly stores any item you copy in the cloud, 
+                    meaning you can access your snippets immediately on all your 
+                    devices. Our Mac and iOS apps will help you organize everything.
+                </h1>
+            </div>
+            <div>
+                <img src="/images/image-computer.png" alt="">
+            </div>
+            <div class="text-div">
+                <h2 class="heading">Quick Search</h2>
+                <p class="para-heading">Easily search your snippets by content, category, web address, application, and more.</p>
+            </div>
+            
+            <div class="text-div">
+                <h2 class="heading">iCloud Sync</h2>
+                <p class="para-heading">Instantly saves and syncs snippets across all your devices.</p>
+            </div>
 
-  Clipboard allows you to track and organize everything you 
-  copy. Instantly access your clipboard on all your devices.
+            <div class="text-div">
+                <h2 class="heading">Complete History</h2>
+                <p class="para-heading">Retrieve any snippets from the first moment you started using the app.</p>
+            </div>
+        </section>
 
-  Download for iOS
-  Download for Mac
+        <section class="section grid-flow">
+            <div class="text-div">
+                <h1 class="heading">Access Clipboard Anywhere</h1>
+                <p class="para-heading">Whether you're on the go, or at your computer, you can access all your Clipboard 
+                    snippets in a few simple clicks.</p>
+            </div>
+            <div>
+                <img src="/images/image-devices.png" alt="">
+            </div>
+        </section>
 
-  Keep track of your snippets
+        <section class="section grid-flow">
+            <div class="section-3-heading">
+                <h1 class="heading">Supercharge your workflow</h1>
+                <h2 class="para-heading">We've got the tools to boost your productivity.</h2>
+            </div>
 
-  Clipboard instantly stores any item you copy in the cloud, 
-  meaning you can access your snippets immediately on all your 
-  devices. Our Mac and iOS apps will help you organize everything.
+            <div class="feature-div-main grid-flow">
+                <div class="feature-div grid-flow">
+                    <img src="/images/icon-blacklist.svg" alt="" class="feature-img">
+                    <h1 class="heading">Create Blacklists</h1>
+                    <p class="para-heading">Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+                </div>
 
-  Quick Search
+                <div class="feature-div grid-flow">
+                    <img src="/images/icon-text.svg" alt="" class="feature-img">
+                    <h1 class="heading">Plain text snippets</h1>
+                    <p class="para-heading">Remove unwanted formatting from copied text for a consistent look.</p>
+                </div>
 
-  Easily search your snippets by content, category, web address, application, and more.
+                <div class="feature-div grid-flow">
+                    <img src="/images/icon-preview.svg" alt="" class="feature-img">
+                    <h1 class="heading">Sneak preview</h1>
+                    <p class="para-heading">Quick preview of all snippets on your Clipboard for easy access.</p>
+                </div>
+            </div>
+        </section>
 
-  iCloud Sync
+        <section class="section grid-flow">
+            <img src="/images/logo-google.png" alt="">
+            <img src="/images/logo-ibm.png" alt="">
+            <img src="/images/logo-microsoft.png" alt="">
+            <img src="/images/logo-hp.png" alt="">
+            <img src="/images/logo-vector-graphics.png" alt="">
+        </section>
 
-  Instantly saves and syncs snippets across all your devices.
+        <section class="section grid-flow">
+            <h1 class="heading">Clipboard for iOS and Mac OS</h1>
+            <p class="para-heading">Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
+                and you're ready to start adding to your clipboard.
+            </p>
 
-  Complete History
-
-  Retrieve any snippets from the first moment you started using the app.
-
-  Access Clipboard anywhere
-
-  Whether you’re on the go, or at your computer, you can access all your Clipboard 
-  snippets in a few simple clicks.
-
-  Supercharge your workflow
-
-  We’ve got the tools to boost your productivity.
-
-  Create blacklists
-
-  Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
-
-  Plain text snippets
-
-  Remove unwanted formatting from copied text for a consistent look.
-
-  Sneak preview
-
-  Quick preview of all snippets on your Clipboard for easy access.
-
-  Clipboard for iOS and Mac OS
-
-  Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
-  and you’re ready to start adding to your clipboard.
-
-  Download for iOS
-  Download for Mac
-
-  FAQs
-  Contact Us
-  Privacy Policy
-  Press Kit
-  Install Guide
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+            <article>
+                <button>Download or iOS</button>
+                <button class="mac">Download for Mac</button>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
